now 'ProductCarousel' can shift its products in its first form

--- a/src/Components/ProductCarousel/ProductCarousel.module.css
+++ b/src/Components/ProductCarousel/ProductCarousel.module.css
@@ -59,7 +59,7 @@
 
 /* trendItems */
 .trendItems{
-    --x-axis : 0%;
+    --x-axis : 0;
     display: grid;
     grid-template-columns: repeat(10, 200px);
     grid-gap: 5px;
