--- a/src/Components/ProductCarousel/ProductCarousel.module.css
+++ b/src/Components/ProductCarousel/ProductCarousel.module.css
@@ -65,6 +65,7 @@
     grid-gap: 5px;
     width: 2000px;
     transform: translateX(var(--x-axis));
+    transition: all 2s;
 }
 
 
@@ -77,11 +78,12 @@
     .trendBody{
         width: 500px;
     }
-    /* trendItems */
+    /*trendItems*/ 
     .trendItems{
         grid-template-columns: repeat(10, 255px);
         width: 500%;
     }
+    
 }
 
 @media (max-width: 500px){
