--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -2,7 +2,8 @@ nav{
     position: sticky;
     display: flex;
     justify-content: center;
-    z-index: 1;
+    background-color: white;
+    z-index: 3;
     top: 0;
     transition: top 0.3s;
 }
