--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -51,9 +51,14 @@
     grid-row: 1/3;
 }
 
-/* clothes */
-.clothes{
+/* lamps */
+.lamps{
     grid-row: 1/3;
+}
+
+.lamps img{
+    object-fit: cover;
+    width: auto;
 }
 
 /* peripherals */
@@ -76,10 +81,14 @@
         grid-template-columns: repeat(2, 250px);
         grid-template-rows: repeat(2, 1fr);
     }
-    /* furniture clothes peripherals electronics */
-    .furniture, .clothes, .peripherals, .electronics{
+    /* furniture lamps peripherals electronics */
+    .furniture, .lamps, .peripherals, .electronics{
         grid-column: auto;
         grid-row: auto;
+    }
+
+    .lamps img{
+        object-fit: cover;
     }
 }
 
@@ -87,5 +96,9 @@
     .headerImages{
         grid-template-columns: repeat(1, 190px);
         grid-template-rows: repeat(4, 95px);
+    }
+
+    .lamps img{
+        width: 100%;
     }
 }
