--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,16 @@
   --white-active: rgb(200, 200, 200);
 }
 
+html{
+  overflow-x: hidden;
+}
+
 body {
   position: relative;
   min-height: 100vh;
   width: 100%;
   margin: 0;
   overflow-x: hidden;
-  overflow-y:visible;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
