--- a/src/Components/Separator/Separator.module.css
+++ b/src/Components/Separator/Separator.module.css
@@ -75,7 +75,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column-reverse;
-        height: 350px;
+        height: auto;
     }
 
     /* separatorImage */
