centered the 'productSection' class in 'Product' page

--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -1,5 +1,8 @@
 /* productSection */
 .productSection{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     height: 100vh;
     max-height: 800px;
 }
