added form to 'SignIn'

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ section{
   max-height: 1080px;
 }
 
-h1,h2,h3,h4,a,button,p{
+h1,h2,h3,h4,a,button,p,label{
   font-family: 'Albert Sans', sans-serif;
 }
 
