--- a/src/Pages/LogIn/LogIn.module.css
+++ b/src/Pages/LogIn/LogIn.module.css
@@ -1,10 +1,15 @@
 /* form */
 .form{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+}
+
+.form h2{
+    margin-bottom: 15px;
 }
 
 /* login */
