--- a/src/Pages/SignIn/SignIn.module.css
+++ b/src/Pages/SignIn/SignIn.module.css
@@ -1,10 +1,11 @@
 /* form */
 .form{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 /* signin */
